tests/errors/2_syntax_errors/if_empty_condition.java
class Main {
    static void run() {
        String a = "str";
        if() { // and with a different type than boolean

        }
        
    }
}